{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 417,
  "lineage": "a81c299e-d4e9-1043-cfae-faf70dfcfff0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "neptune-ec2-connector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cf15d6d096df5d2",
            "arn": "arn:aws:ec2:us-east-1:410585721938:instance/i-0cfe91c868b80441f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfe91c868b80441f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform-20210825120127680300000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066350ebc56932648",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_ip": "54.175.161.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fe20335b97b0e75",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07712fd3ddb8f4496",
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cac0e6d47c4822de"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.http.workstation-external-ip",
            "aws_key_pair.auth",
            "aws_security_group.bastion_sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:internet-gateway/igw-01361a7fa9c8c36e8",
            "id": "igw-01361a7fa9c8c36e8",
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "vpc_id": "vpc-01355d33c0b25ab2a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01361a7fa9c8c36e8",
            "id": "r-rtb-0eba3f0afceda3a511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eba3f0afceda3a51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:security-group/sg-0cac0e6d47c4822de",
            "description": "Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac0e6d47c4822de",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.156.216.190/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "410585721938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01355d33c0b25ab2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "neptune_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:security-group/sg-0281720a421cae943",
            "description": "Neptune",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0281720a421cae943",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8182,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8182
              }
            ],
            "name": "neptune-sg",
            "name_prefix": "",
            "owner_id": "410585721938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01355d33c0b25ab2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-07712fd3ddb8f4496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07712fd3ddb8f4496",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "vpc_id": "vpc-01355d33c0b25ab2a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:subnet/subnet-0641cc7a7a650bced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0641cc7a7a650bced",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-init-dev-ec2-sg"
            },
            "vpc_id": "vpc-01355d33c0b25ab2a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:410585721938:vpc/vpc-01355d33c0b25ab2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b51956ddc9e9cb60",
            "default_route_table_id": "rtb-0eba3f0afceda3a51",
            "default_security_group_id": "sg-003b9f1e0a9c2312f",
            "dhcp_options_id": "dopt-b090d0ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01355d33c0b25ab2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eba3f0afceda3a51",
            "owner_id": "410585721938",
            "tags": {
              "Name": "tf-init-dev-VPC"
            },
            "tags_all": {
              "Name": "tf-init-dev-VPC"
            }
          }
        }
      ]
    }
  ]
}